@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2685: Fix error in EvalFunc ctor when implementing Algebraic UDF whose return type is parameterized (andy schlaikjer via jcoveney)
+
 PIG-2650: Convenience mock Loader and Storer to simplify unit testing of Pig scripts (julien)
 
 PIG-2541: Automatic record provenance (source tagging) for PigStorage (prkommireddi via daijy)
